--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
