--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "jwt-simple": "^0.5.6",
+    "mongodb": "6.3",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1"
   }
