--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/pm": "^2.2.5",
+    "@tiptap/react": "^2.2.5",
+    "@tiptap/starter-kit": "^2.2.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.55",
@@ -21,6 +24,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.0",
