--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tiptap/extension-color": "^2.2.5",
+    "@tiptap/extension-color": "^2.2.6",
+    "@tiptap/extension-link": "^2.2.6",
+    "@tiptap/extension-list-item": "^2.2.6",
     "@tiptap/extension-placeholder": "^2.2.5",
-    "@tiptap/extension-text-style": "^2.2.5",
+    "@tiptap/extension-text-align": "^2.2.6",
+    "@tiptap/extension-text-style": "^2.2.6",
     "@tiptap/pm": "^2.2.5",
     "@tiptap/react": "^2.2.5",
     "@tiptap/starter-kit": "^2.2.5",
