--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "@tiptap/extension-color": "^2.2.5",
     "@tiptap/extension-placeholder": "^2.2.5",
     "@tiptap/extension-text-style": "^2.2.5",
