--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-color": "^2.2.6",
+    "@tiptap/extension-highlight": "^2.2.6",
     "@tiptap/extension-link": "^2.2.6",
     "@tiptap/extension-list-item": "^2.2.6",
     "@tiptap/extension-placeholder": "^2.2.5",
+    "@tiptap/extension-table": "^2.2.6",
+    "@tiptap/extension-table-cell": "^2.2.6",
+    "@tiptap/extension-table-header": "^2.2.6",
+    "@tiptap/extension-table-row": "^2.2.6",
     "@tiptap/extension-text-align": "^2.2.6",
     "@tiptap/extension-text-style": "^2.2.6",
     "@tiptap/pm": "^2.2.5",
