--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-color": "^2.2.6",
     "@tiptap/extension-highlight": "^2.2.6",
+    "@tiptap/extension-image": "^2.3.0",
     "@tiptap/extension-link": "^2.2.6",
     "@tiptap/extension-list-item": "^2.2.6",
     "@tiptap/extension-placeholder": "^2.2.5",
