--- a/client/package.json
+++ b/client/package.json
@@ -41,11 +41,13 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.0",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
+    "universal-cookie": "^7.1.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.90.2"
   },
