--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "joi": "^17.12.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.1.2",
-    "multer": "^1.4.5-lts.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4"
   }
 }
