--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@tiptap/extension-link": "^2.2.6",
     "@tiptap/extension-list-item": "^2.2.6",
     "@tiptap/extension-placeholder": "^2.2.5",
+    "@tiptap/extension-subscript": "^2.5.5",
+    "@tiptap/extension-superscript": "^2.5.5",
     "@tiptap/extension-table": "^2.2.6",
     "@tiptap/extension-table-cell": "^2.2.6",
     "@tiptap/extension-table-header": "^2.2.6",
